modification: suppression de code déprécié