@@ -211,7 +211,7 @@ public class AwsCodeCommitCredentialProvider extends CredentialsProvider {
 		}
 
 		try {
-			URL url = new URL(uri);
+			URL url = URI.create(uri).toURL();
 			URI u = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(),
 					url.getQuery(), url.getRef());
 			if (u.getScheme().equals("https")) {
